# FineTuningMaster

./: .env.example  .gitignore  README.md  REMOTE_RUN.md  conftest.py  generate_dataset.py  masterplan_de.md  pyproject.toml  requirements-train.txt  requirements.txt  train.py
algorithms/: __init__.py  dora.py  galore.py  loftq.py  orpo.py  rslora.py
archive/: colab_finetune.ipynb  config.yaml  inference.py
archive/dashboard-design-finetuning/: .gitignore  README.md  _check_project.py  requirements.txt
archive/old_pipeline/: README.md  generate_dataset.py  requirements.txt
configs/: config.yaml
configs/eval/: full.yaml
configs/experiment/: E04_qwen0_5b_ft_rag.yaml
configs/experiments/: dora.yaml  qlora.yaml  qlora_rag.yaml
configs/method/: ft.yaml
configs/models/: qwen_0_5b.yaml  qwen_1_5b.yaml  qwen_3b.yaml
configs/retriever/: tfidf_placeholder.yaml
configs/training/: full_ft.yaml
dashboard-design-finetuning/: README.md  requirements.txt
dashboard-design-finetuning/notebooks/: _build_notebook.py  colab_finetuning_qwen_0_5b.ipynb
dashboard-design-finetuning/rag/: build_index.py
dashboard-design-finetuning/scripts/: 01_check_environment.py  02_generate_synthetic_dataset.py  03_prepare_dataset.py  04_train_lora.py  05_inference_base_model.py  06_inference_finetuned_model.py  07_evaluate_schema_compliance.py  09_transform_chart_dataset_to_dashboard_briefs.py
data/: __init__.py  gold.jsonl  test.jsonl  val.jsonl
data/raw_legacy/: train.jsonl
docs/project/: masterplan_de.md
evaluation/: robustness.py
experiments/notebooks/: 01_data_exploration.ipynb  02_results_analysis.ipynb
experiments/scripts/: aggregate_results.py  build_data.py  build_human_eval.py  build_kb.py  build_perturbations.py  compute_irr.py  eval_auto.py  eval_stats.py  generate_dataset.py  infer.py  run_all.py  run_experiment.py  run_human_eval.py  run_remote.py  train.py
experiments/slurm/: submit_pipeline.sh
pipeline/: evaluate.py  inference.py  prepare_data.py
rag/: indexer.py
results/human_eval/: assignment.json  items.jsonl
results/stats/: posthoc_mcnemar.csv  stats_report.json
scripts/: aggregate_results.py  build_data.py  build_human_eval.py  build_kb.py  build_perturbations.py  compute_irr.py  eval_auto.py  eval_stats.py  generate_dataset.py  infer.py  run_all.py  run_experiment.py  run_human_eval.py  train.py
slurm/: submit_pipeline.sh
src/: __init__.py
src/config/: config.yaml
src/core/: __init__.py  constants.py  interfaces.py  prompts.py  registry.py  schemas.py
src/data/: __init__.py  dataset.py  kb_builder.py  splits.py
src/data_pipeline/: __init__.py  dataset.py  formatter.py  perturbations.py  (+1 more)
tests/: test_generator.py  test_metrics.py  test_perturbations.py  test_retriever.py  test_schema.py  test_splits.py
utils/: config_loader.py
(+143 files in other folders)
