[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-dashboard-llm"
version = "0.2.0"
description = "Fine-tuning LLMs for structured dashboard design recommendations"
readme = "README.md"
requires-python = ">=3.10"

# Base dependencies: enough to run inference, evaluation and the statistics.
# This is what the local (CPU) machine needs. The training stack is a separate
# extra so that inference never depends on peft/trl/bitsandbytes.
dependencies = [
    "torch>=2.6",
    "transformers==5.7.0",
    "pydantic>=2.11",
    "hydra-core==1.3.2",
    "omegaconf>=2.3",
    "numpy>=2.0",
    "scipy>=1.16",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Training-only stack — installed on the GPU machine that runs scripts/train.py.
# Pinned to the versions the migrated trainer is known to run against.
train = [
    "peft==0.19.1",
    "trl==1.3.0",
    "bitsandbytes==0.49.2",
    "accelerate==1.13.0",
    "datasets==4.8.5",
]
human = [
    "streamlit>=1.30",
]
# Optional extras for the nice-to-have features (none required for the core A/B/C/D study):
constrained = [          # constrained JSON decoding
    "outlines>=0.0.46",
]
rag-dense = [            # dense embedding retriever (semantic RAG)
    "sentence-transformers>=2.6",
]
galore = [               # GaLore full-parameter fine-tuning
    "galore-torch>=1.0",
]
# G-Eval (LLM-as-judge) needs no package — it uses urllib against an
# OpenAI-compatible endpoint (set OPENAI_API_KEY / OPENAI_BASE_URL).
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
